# camaracapoeira

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: app.rs  main.rs
src/components/: mod.rs  responsive_view.rs  stacking_container.rs
src/components/header/: mod.rs
src/components/stacks/: vstack.rs
src/routes/home/: about_section.rs  footer_section.rs  hero.rs  media_section.rs  mod.rs  webgl_slideshow.rs
style/: main.scss
