[package]
name = "camaracapoeira"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
http = { version = "1.4.0", optional = true }
leptos = { version = "0.8.14" }
leptos_meta = { version = "0.8.5" }
leptos_actix = { version = "0.8.6", optional = true }
leptos_router = { version = "0.8.10" }
web-sys = { version = "0.3.82", features = ["HtmlCanvasElement", "HtmlImageElement", "Window", "Performance", "WebGlRenderingContext", "WebGlProgram", "WebGlShader", "WebGlTexture", "WebGlBuffer", "WebGlUniformLocation", "Element", "HtmlElement", "CssStyleDeclaration"] }
leptos-use = "0.16.3"
uuid = { version = "1.18.1", features = ["js"] }
js-sys = "0.3.82"
wasm-bindgen = "=0.2.105" 
log = "0.4.28"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
awc = { version = "3.8.1", features = ["openssl"], optional = true }
futures-util = { version = "0.3.31", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }
url = { version = "2.5.7", optional = true }
env_logger = "0.11.8"
rand = "0.9.2"
moka = { version = "0.12.11", features = ["sync"] }
image = { version = "0.25.9", features = ["jpeg", "webp", "avif-native"] }
once_cell = "1.21.3"
tempfile = "3.23.0"
# Add futures for StreamExt
futures = "0.3" 

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "dep:leptos_actix",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
gateway_lb = ["ssr", "dep:awc", "dep:futures-util", "dep:tokio", "dep:url"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "camaracapoeira"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "assets"
site-addr = "0.0.0.0:3020"
reload-port = 3023
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"